--- a/packages/custom/ddb/public/assets/css/ddb.css
+++ b/packages/custom/ddb/public/assets/css/ddb.css
@@ -1,3 +1,21 @@
-.ddb-example h1 {
-  background-color: purple
+.navbar-brand {
+    color: #fff !important;
+}
+
+.navbar-nav > li > a {
+    color: #fff !important;
+    border-bottom: 5px solid black !important;
+}
+
+.navbar-nav:hover > li > a {
+    border-bottom: 5px solid darkorange !important;
+}
+
+.navbar {
+    max-height: 55px !important;
+}
+
+.dropdown-menu {
+    right: 0 !important;
+    left: initial ;
 }
