--- a/packages/custom/ddb/public/views/profile.html
+++ b/packages/custom/ddb/public/views/profile.html
@@ -8,29 +8,41 @@
         <div class="col-md-6">
             <div class="panel panel-default">
                 <div class="panel-heading">
-                    <h3 class="panel-title">Voorkeursprofiel</h3>
+                    <h3 class="panel-title">Key Performance Indicators</h3>
                 </div>
                 <div class="panel-body">
-                    <canvas id="preferenceRadar" class="chart chart-radar" data="typeProfileData"
-                            labels="typeLabels"></canvas>
+                    <table class="table table-striped table-hover">
+                        <tbody>
+                        <tr>
+                            <th>Percentage Drinkdagen</th>
+                            <td>{{profile.drinkingDayRate | number:2}}%</td>
+                        </tr>
+                        <tr>
+                            <th>Zwaarste Binge</th>
+                            <td>{{profile.highestBinge | number:2}} cl ({{profile.highestBingeDate |
+                                date:'dd/MM/yy'}})
+                            </td>
+                        </tr>
+                        <tr>
+                            <th>Gemiddeld Dagverbruik</th>
+                            <td>{{profile.avgAlc | number:2}} cl</td>
+                        </tr>
+                        <tr>
+                            <th>Gemiddeld Weekendverbruik</th>
+                            <td>{{profile.avgWeekend | number:2}} cl</td>
+                        </tr>
+                        <tr>
+                            <th>Gemiddeld Werkweekverbruik</th>
+                            <td>{{profile.avgWorkWeek | number:2}} cl</td>
+                        </tr>
+                        <tr>
+                            <th>Consistentiefactor</th>
+                            <td>{{profile.consistencyFactor | number:3}}</td>
+                        </tr>
+                        </tbody>
+                    </table>
                 </div>
             </div>
-        </div>
-        <div class="col-md-6">
-            <div class="panel panel-default">
-                <div class="panel-heading">
-                    <h3 class="panel-title">Weekprofiel</h3>
-                </div>
-                <div class="panel-body">
-                    <canvas id="weekRadar" class="chart chart-radar" data="typeProfileData"
-                            labels="typeLabels"></canvas>
-                </div>
-            </div>
-        </div>
-    </div>
-
-    <div class="row">
-        <div class="col-md-6">
             <div class="panel panel-default">
                 <div class="panel-heading">
                     <h3 class="panel-title">7-daagse Drinktrend</h3>
@@ -46,6 +58,108 @@
         <div class="col-md-6">
             <div class="panel panel-default">
                 <div class="panel-heading">
+                    <h3 class="panel-title">Voorkeursprofiel</h3>
+                </div>
+                <div class="panel-body">
+                    <canvas id="preferenceRadar" class="chart chart-radar" data="typeProfileData"
+                            labels="typeLabels"></canvas>
+                </div>
+                <div class="panel-body">
+                    <table class="table table-striped table-hover">
+                        <thead>
+                        <th></th>
+                        <th>Totaal</th>
+                        <th>Totaal Alcohol</th>
+                        </thead>
+                        <tbody>
+                        <tr>
+                            <th>Pils</th>
+                            <td>{{profile.totPilsner}} cl</td>
+                            <td>{{profile.totAlcPilsner | number:2}} cl</td>
+                        </tr>
+                        <tr>
+                            <th>Zwaar Bier</th>
+                            <td>{{profile.totStrongbeer}} cl</td>
+                            <td>{{profile.totAlcStrongbeer | number:2}} cl</td>
+                        </tr>
+                        <tr>
+                            <th>Wijn</th>
+                            <td>{{profile.totWine}} cl</td>
+                            <td>{{profile.totAlcWine | number:2}} cl</td>
+                        </tr>
+                        <tr>
+                            <th>Sterke Drank</th>
+                            <td>{{profile.totLiquor}} cl</td>
+                            <td>{{profile.totAlcLiquor | number:2}} cl</td>
+                        </tr>
+                        </tbody>
+                    </table>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="row">
+        <div class="col-md-6">
+            <div class="panel panel-default">
+                <div class="panel-heading">
+                    <h3 class="panel-title">Weekprofiel</h3>
+                </div>
+                <div class="panel-body">
+                    <canvas id="weekRadar" class="chart chart-radar" data="weekProfileData"
+                            labels="weekLabels"></canvas>
+                </div>
+                <div class="panel-body">
+                    <table class="table table-striped table-hover">
+                        <thead>
+                        <th></th>
+                        <th>Totaal Alcohol</th>
+                        <th>Gemiddeld per dag</th>
+                        </thead>
+                        <tbody>
+                        <tr>
+                            <th>Maandag</th>
+                            <td>{{profile.totAlcMon | number:2}} cl</td>
+                            <td>{{profile.avgAlcMon | number:2}} cl</td>
+                        </tr>
+                        <tr>
+                            <th>Dinsdag</th>
+                            <td>{{profile.totAlcTue | number:2}} cl</td>
+                            <td>{{profile.avgAlcTue | number:2}} cl</td>
+                        </tr>
+                        <tr>
+                            <th>Woensdag</th>
+                            <td>{{profile.totAlcWed | number:2}} cl</td>
+                            <td>{{profile.avgAlcWed | number:2}} cl</td>
+                        </tr>
+                        <tr>
+                            <th>Donderdag</th>
+                            <td>{{profile.totAlcThu | number:2}} cl</td>
+                            <td>{{profile.avgAlcThu | number:2}} cl</td>
+                        </tr>
+                        <tr>
+                            <th>Vrijdag</th>
+                            <td>{{profile.totAlcFri | number:2}} cl</td>
+                            <td>{{profile.avgAlcFri | number:2}} cl</td>
+                        </tr>
+                        <tr>
+                            <th>Zaterdag</th>
+                            <td>{{profile.totAlcSat | number:2}} cl</td>
+                            <td>{{profile.avgAlcSat | number:2}} cl</td>
+                        </tr>
+                        <tr>
+                            <th>Zondag</th>
+                            <td>{{profile.totAlcSun | number:2}} cl</td>
+                            <td>{{profile.avgAlcSun | number:2}} cl</td>
+                        </tr>
+                        </tbody>
+                    </table>
+                </div>
+            </div>
+        </div>
+        <div class="col-md-6">
+            <div class="panel panel-default">
+                <div class="panel-heading">
                     <h3 class="panel-title">Cumulatieve Drinktrend</h3>
                 </div>
                 <div class="panel-body">
@@ -55,11 +169,6 @@
                     </canvas>
                 </div>
             </div>
-        </div>
-    </div>
-
-    <div class="row">
-        <div class="col-md-12">
             <div class="panel panel-default">
                 <div class="panel-heading">
                     <h3 class="panel-title">Alcohol Gegevens</h3>
@@ -77,9 +186,9 @@
                         <tbody>
                         <tr ng-repeat="dailyAnalysis in dailyAnalyses | orderBy:'-date' | startFrom:((currentPage-1)*pageSize) | limitTo:pageSize">
                             <td>{{dailyAnalysis.date | date:'dd/MM/yy'}}</td>
-                            <td>{{dailyAnalysis.totalAlc}}</td>
-                            <td>{{dailyAnalysis.totalCum}}</td>
-                            <td>{{dailyAnalysis.spreadAverage}}</td>
+                            <td>{{dailyAnalysis.todAlc | number:2}}</td>
+                            <td>{{dailyAnalysis.cumAlc | number:2}}</td>
+                            <td>{{dailyAnalysis.spreadAverage | number:2}}</td>
                         </tr>
                         </tbody>
                         <tfoot>
@@ -101,7 +210,6 @@
             </div>
         </div>
     </div>
-
 
 </div>
 
