--- a/packages/custom/ddb/public/views/profile.html
+++ b/packages/custom/ddb/public/views/profile.html
@@ -1,7 +1,9 @@
 <div class="" data-ng-controller="DdbProfileController">
 
     <div class="page-header">
-        <h1>Drinkprofiel voor {{user.user.name}}</h1>
+        <h1>Drinkprofiel
+            <small>van {{user.user.name}}</small>
+        </h1>
     </div>
 
     <div class="row">
