Translated to english

--- a/packages/core/system/public/views/header.html
+++ b/packages/core/system/public/views/header.html
@@ -9,7 +9,7 @@
                 <span class="icon-bar"></span>
             </button>
             <a class="navbar-brand" href="#">
-                <a class="navbar-brand" ui-sref="home">Drankdatabank</a>
+                <a class="navbar-brand" ui-sref="home">Beerkeeper</a>
             </a>
         </div>
 
