--- a/packages/custom/ddb/public/views/measurements.html
+++ b/packages/custom/ddb/public/views/measurements.html
@@ -1,8 +1,8 @@
 <div class="" data-ng-controller="DdbMeasurementsController">
 
     <div class="page-header">
-        <h1>Drinkgegevens
-            <small>van {{user.user.name}}</small>
+        <h1>Drinking Data<br class="visible-xs"/>
+            <small>for {{user.user.name}}</small>
         </h1>
     </div>
 
@@ -10,11 +10,11 @@
         <table class="table table-striped table-condensed table-hover">
             <thead>
             <tr>
-                <th class="col-xs-2">Dag</th>
-                <th class="col-xs-2">Pils</th>
-                <th class="col-xs-2">Zwaar Bier</th>
-                <th class="col-xs-2">Wijn</th>
-                <th class="col-xs-2">Sterke Drank</th>
+                <th class="col-xs-2">Day</th>
+                <th class="col-xs-2">Pilser (cl)</th>
+                <th class="col-xs-2">Strong Beer (cl)</th>
+                <th class="col-xs-2">Wine (cl)</th>
+                <th class="col-xs-2">Liquor (cl)</th>
                 <th class="col-xs-2"></th>
             </tr>
             </thead>
