--- a/packages/core/system/server/views/includes/head.html
+++ b/packages/core/system/server/views/includes/head.html
@@ -5,18 +5,18 @@
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <meta name="fragment" content="!">
 
-  <title>{{appName}} - {{title}}</title>
+  <title>{{appName}}</title>
   <meta http-equiv="Content-type" content="text/html;charset=UTF-8">
   <meta name="keywords" content="node.js, express, mongoose, mongodb, angularjs, swig">
-  <meta name="description" content="MEAN - A Modern Stack: MongoDB, ExpressJS, AngularJS, NodeJS. (BONUS: Passport User Support).">
+  <meta name="description" content="Beerkeeper - The social drinking network">
 
   <meta property="fb:app_id" content="APP_ID">
   <meta property="og:title" content="{{appName}} - {{title}}">
   <meta property="og:description" content="The social drinking network">
   <meta property="og:type" content="website">
-  <meta property="og:url" content="APP_URL">
+  <meta property="og:url" content="beerkeeper.net">
   <meta property="og:image" content="APP_LOGO">
-  <meta property="og:site_name" content="DrinkSocial">
+  <meta property="og:site_name" content="Beerkeeper">
   <meta property="fb:admins" content="APP_ADMIN">
 
   <link rel="stylesheet" href="/bower_components/bootstrap/dist/css/bootstrap.css">
