--- a/packages/custom/ddb/public/views/profile.html
+++ b/packages/custom/ddb/public/views/profile.html
@@ -1,8 +1,8 @@
 <div class="" data-ng-controller="DdbProfileController">
 
     <div class="page-header">
-        <h1>Drinkprofiel
-            <small>van {{user.user.name}}</small>
+        <h1>Profile<br class="visible-xs"/>
+            <small>for {{user.user.name}}</small>
         </h1>
     </div>
 
@@ -16,29 +16,29 @@
                     <table class="table table-striped table-hover">
                         <tbody>
                         <tr>
-                            <th>Percentage Drinkdagen</th>
+                            <th>Percentage drinking days</th>
                             <td>{{profile.drinkingDayRate | number:2}}%</td>
                         </tr>
                         <tr>
-                            <th>Zwaarste Binge</th>
+                            <th>Heaviest binge</th>
                             <td>{{profile.highestBinge | number:2}} cl ({{profile.highestBingeDate |
                                 date:'dd/MM/yy'}})
                             </td>
                         </tr>
                         <tr>
-                            <th>Gemiddeld Dagverbruik</th>
+                            <th>Average daily alcohol intake</th>
                             <td>{{profile.avgAlc | number:2}} cl</td>
                         </tr>
                         <tr>
-                            <th>Gemiddeld Weekendverbruik</th>
+                            <th>Average daily alcohol intake (Fri-Sun)</th>
                             <td>{{profile.avgWeekend | number:2}} cl</td>
                         </tr>
                         <tr>
-                            <th>Gemiddeld Werkweekverbruik</th>
+                            <th>Average daily alcohol intake (Mon-Thu)</th>
                             <td>{{profile.avgWorkWeek | number:2}} cl</td>
                         </tr>
                         <tr>
-                            <th>Consistentiefactor</th>
+                            <th>Consistency factor</th>
                             <td>{{profile.consistencyFactor | number:3}}</td>
                         </tr>
                         </tbody>
@@ -47,7 +47,7 @@
             </div>
             <div class="panel panel-default">
                 <div class="panel-heading">
-                    <h3 class="panel-title">7-daagse Drinktrend</h3>
+                    <h3 class="panel-title">7-day Drinking Trend</h3>
                 </div>
                 <div class="panel-body">
                     <canvas id="spreadTrend" class="chart chart-line" data="spreadAverageData"
@@ -60,7 +60,7 @@
         <div class="col-md-6">
             <div class="panel panel-default">
                 <div class="panel-heading">
-                    <h3 class="panel-title">Voorkeursprofiel</h3>
+                    <h3 class="panel-title">Preference Profile</h3>
                 </div>
                 <div class="panel-body">
                     <canvas id="preferenceRadar" class="chart chart-radar" data="typeProfileData"
@@ -70,27 +70,27 @@
                     <table class="table table-striped table-hover">
                         <thead>
                         <th></th>
-                        <th>Totaal</th>
-                        <th>Totaal Alcohol</th>
+                        <th>Total</th>
+                        <th>Total Alcohol</th>
                         </thead>
                         <tbody>
                         <tr>
-                            <th>Pils</th>
+                            <th>Pilsner</th>
                             <td>{{profile.totPilsner}} cl</td>
                             <td>{{profile.totAlcPilsner | number:2}} cl</td>
                         </tr>
                         <tr>
-                            <th>Zwaar Bier</th>
+                            <th>Strong Beer</th>
                             <td>{{profile.totStrongbeer}} cl</td>
                             <td>{{profile.totAlcStrongbeer | number:2}} cl</td>
                         </tr>
                         <tr>
-                            <th>Wijn</th>
+                            <th>Wine</th>
                             <td>{{profile.totWine}} cl</td>
                             <td>{{profile.totAlcWine | number:2}} cl</td>
                         </tr>
                         <tr>
-                            <th>Sterke Drank</th>
+                            <th>Liquor</th>
                             <td>{{profile.totLiquor}} cl</td>
                             <td>{{profile.totAlcLiquor | number:2}} cl</td>
                         </tr>
@@ -105,7 +105,7 @@
         <div class="col-md-6">
             <div class="panel panel-default">
                 <div class="panel-heading">
-                    <h3 class="panel-title">Weekprofiel</h3>
+                    <h3 class="panel-title">Week Profile</h3>
                 </div>
                 <div class="panel-body">
                     <canvas id="weekRadar" class="chart chart-radar" data="weekProfileData"
@@ -115,42 +115,42 @@
                     <table class="table table-striped table-hover">
                         <thead>
                         <th></th>
-                        <th>Totaal Alcohol</th>
-                        <th>Gemiddeld per dag</th>
+                        <th>Total Alcohol</th>
+                        <th>Daily Average</th>
                         </thead>
                         <tbody>
                         <tr>
-                            <th>Maandag</th>
+                            <th>Monday</th>
                             <td>{{profile.totAlcMon | number:2}} cl</td>
                             <td>{{profile.avgAlcMon | number:2}} cl</td>
                         </tr>
                         <tr>
-                            <th>Dinsdag</th>
+                            <th>Tuesday</th>
                             <td>{{profile.totAlcTue | number:2}} cl</td>
                             <td>{{profile.avgAlcTue | number:2}} cl</td>
                         </tr>
                         <tr>
-                            <th>Woensdag</th>
+                            <th>Wednesday</th>
                             <td>{{profile.totAlcWed | number:2}} cl</td>
                             <td>{{profile.avgAlcWed | number:2}} cl</td>
                         </tr>
                         <tr>
-                            <th>Donderdag</th>
+                            <th>Thursday</th>
                             <td>{{profile.totAlcThu | number:2}} cl</td>
                             <td>{{profile.avgAlcThu | number:2}} cl</td>
                         </tr>
                         <tr>
-                            <th>Vrijdag</th>
+                            <th>Friday</th>
                             <td>{{profile.totAlcFri | number:2}} cl</td>
                             <td>{{profile.avgAlcFri | number:2}} cl</td>
                         </tr>
                         <tr>
-                            <th>Zaterdag</th>
+                            <th>Saturday</th>
                             <td>{{profile.totAlcSat | number:2}} cl</td>
                             <td>{{profile.avgAlcSat | number:2}} cl</td>
                         </tr>
                         <tr>
-                            <th>Zondag</th>
+                            <th>Sunday</th>
                             <td>{{profile.totAlcSun | number:2}} cl</td>
                             <td>{{profile.avgAlcSun | number:2}} cl</td>
                         </tr>
@@ -162,7 +162,7 @@
         <div class="col-md-6">
             <div class="panel panel-default">
                 <div class="panel-heading">
-                    <h3 class="panel-title">Cumulatieve Drinktrend</h3>
+                    <h3 class="panel-title">Cumulative Drinking Trend</h3>
                 </div>
                 <div class="panel-body">
                     <canvas id="cumulativeTrend" class="chart chart-line" data="cumulativeTrendData"
@@ -173,16 +173,16 @@
             </div>
             <div class="panel panel-default">
                 <div class="panel-heading">
-                    <h3 class="panel-title">Alcohol Gegevens</h3>
+                    <h3 class="panel-title">Alcohol Data</h3>
                 </div>
                 <div class="panel-body">
                     <table class="table table-striped table-condensed table-hover">
                         <thead>
                         <tr>
-                            <th class="col-xs-3">Dag</th>
-                            <th class="col-xs-3">Dagelijkse Alcohol</th>
-                            <th class="col-xs-3">Cumulatief Alcohol</th>
-                            <th class="col-xs-3">7-daags Gemiddelde</th>
+                            <th class="col-xs-3">Date</th>
+                            <th class="col-xs-3">Daily</th>
+                            <th class="col-xs-3">Cumulative</th>
+                            <th class="col-xs-3">7-day Trend</th>
                         </tr>
                         </thead>
                         <tbody>
