--- a/packages/core/system/server/views/includes/head.html
+++ b/packages/core/system/server/views/includes/head.html
@@ -11,7 +11,7 @@
   <meta name="description" content="Beerkeeper - The social drinking network">
 
   <meta property="fb:app_id" content="APP_ID">
-  <meta property="og:title" content="{{appName}} - {{title}}">
+  <meta property="og:title" content="{{appName}}">
   <meta property="og:description" content="The social drinking network">
   <meta property="og:type" content="website">
   <meta property="og:url" content="beerkeeper.net">
