--- a/packages/custom/ddb/public/assets/css/ddb.css
+++ b/packages/custom/ddb/public/assets/css/ddb.css
@@ -26,8 +26,8 @@
 }
 
 .dropdown-menu {
-    right: 0 !important;
-    left: initial;
+    /*right: 0 !important;*/
+    /*left: initial;*/
     background-color: #222 !important;
 }
 
