--- a/packages/custom/ddb/public/views/tools.html
+++ b/packages/custom/ddb/public/views/tools.html
@@ -35,7 +35,7 @@
         </div>
     </div>
 
-    <div class="panel panel-default">
+    <div class="panel panel-danger">
         <div class="panel-heading">
             <h3 class="panel-title">Delete all data</h3>
         </div>
