--- a/packages/custom/ddb/public/views/tools.html
+++ b/packages/custom/ddb/public/views/tools.html
@@ -14,8 +14,7 @@
             <ul>
                 <li>Chrome gebruiken</li>
                 <li>Google sheet drankdatabank openen</li>
-                <li>Selecteer de gegevens van jouw 4 kolommen (zonder headers). Bv J3:M50 voor Michiel. Beginnen op de
-                    eerste rij waarvoor je gegevens hebt. Voor Karel bv. N8:Q50
+                <li>Selecteer de gegevens van jouw 4 kolommen (zonder headers). Bv J3:M50 voor Michiel. Altijd beginnen op rij 3, ookal ben je pas later gegevens beginnen ingeven.
                 </li>
                 <li>CTRL+C om de gegevens te kopieren, en plakken in het invoerveld hieronder</li>
                 <li>Indien je niet hebt meegedaan vanaf de eerste dag, hieronder corrigeren naar de eerste dag waarop je
