--- a/packages/custom/ddb/public/views/tools.html
+++ b/packages/custom/ddb/public/views/tools.html
@@ -43,7 +43,7 @@
                 Clicking this button will delete <strong>all your data</strong>. There is no confirmation. There is no
                 way to undo it.
             </p>
-            <button class="btn btn-danger" ng-click="deleteAll()">Delete all data</button>
+            <button class="btn btn-danger" ng-click="deleteAll()"><i class="glyphicon glyphicon-ok"/> Delete all data</button>
         </div>
     </div>
 
