--- a/packages/custom/ddb/public/views/managegroups.html
+++ b/packages/custom/ddb/public/views/managegroups.html
@@ -13,7 +13,7 @@
                 <div class="panel-body">
 
                     <form ng-submit="createGroup()">
-                        <table class="table table-hover">
+                        <table class="table">
                             <tbody>
                             <tr>
                                 <th class="col-xs-6">Group Name</th>
@@ -24,12 +24,16 @@
                             </tr>
                             <tr>
                                 <th class="col-xs-6">
-                                    Invited Users
-                                </th>
-                                <td>
-                                    <div class="well">
+                                    <p>Invited Users</p>
+
+                                    <div class="well" style="font-weight: normal">
                                         Each invited user will have the choice to accept or reject your invitation to
                                         this group
+                                    </div>
+                                </th>
+                                <td>
+                                    <div class="alert alert-warning" role="alert">
+                                        There are no other users to invite!
                                     </div>
                                     <div class="checkbox" ng-repeat="user in users | orderBy:'username'">
                                         <label>
@@ -41,7 +45,7 @@
                             <tr>
                                 <th></th>
                                 <td>
-                                    <button type="submit" class="btn btn-primary">Create Group</button>
+                                    <button type="submit" class="btn btn-primary"><i class="glyphicon glyphicon-ok"/> Create Group</button>
                                 </td>
                             </tr>
                             </tbody>
@@ -61,7 +65,7 @@
                         You can only join a group if you have an invitation
                     </div>
 
-                    <table class="table table-striped table-hover">
+                    <table class="table table-striped">
                         <tbody>
                         <tr ng-if="!invitations.length">
                             <th colspan="2">You are not invited to any groups</th>
@@ -70,12 +74,12 @@
                             <th class="col-xs-6">{{invitation.name}}</th>
                             <td class="col-xs-3 text-right">
                                 <button type="submit" class="btn btn-success"
-                                        ng-click="acceptInvitation(invitation._id)">Join
+                                        ng-click="acceptInvitation(invitation._id)"><i class="glyphicon glyphicon-ok"/> Join
                                 </button>
                             </td>
                             <td class="col-xs-3 text-right">
                                 <button type="submit" class="btn btn-warning"
-                                        ng-click="rejectInvitation(invitation._id)">Reject
+                                        ng-click="rejectInvitation(invitation._id)"><i class="glyphicon glyphicon-remove"/> Reject
                                 </button>
                             </td>
                         </tr>
