--- a/packages/custom/ddb/public/views/measurements.html
+++ b/packages/custom/ddb/public/views/measurements.html
@@ -6,56 +6,52 @@
         </h1>
     </div>
 
-    <form>
-        <div class="table-responsive">
-            <table class="table table-striped table-condensed table-hover">
-                <thead>
-                <tr>
-                    <th class="col-xs-2">Day</th>
-                    <th class="col-xs-2">Pilser (cl)</th>
-                    <th class="col-xs-2">Strong Beer (cl)</th>
-                    <th class="col-xs-2">Wine (cl)</th>
-                    <th class="col-xs-2">Liquor (cl)</th>
-                    <th class="col-xs-2"></th>
-                </tr>
-                </thead>
-                <tbody>
-                <tr ng-repeat="measurement in measurements | orderBy:'-date' | startFrom:((currentPage-1)*pageSize) | limitTo:pageSize"
-                    ng-class="{info: isToday(measurement.date)}">
-                    <td>{{measurement.date | date:'dd/MM/yy'}}</td>
-                    <td><input class="form-control input-sm" type="number" ng-model="measurement.pilsner"
-                               ng-change="isDirty = true"></td>
-                    <td><input class="form-control input-sm" type="number" ng-model="measurement.strongbeer"
-                               ng-change="isDirty = true"></td>
-                    <td><input class="form-control input-sm" type="number" ng-model="measurement.wine"
-                               ng-change="isDirty = true"></td>
-                    <td><input class="form-control input-sm" type="number" ng-model="measurement.liquor"
-                               ng-change="isDirty = true"></td>
-                    <td>
-                        <button class="btn btn-sm btn-primary" ng-click="save(measurement); isDirty = false"
-                                ng-show="isDirty" ng-disabled="!isValid(measurement)" type="submit">
-                            <i class="glyphicon glyphicon-ok"></i> Save
-                        </button>
-                    </td>
-                </tr>
-                </tbody>
-                <tfoot>
-                <tr ng-hide="!measurements" ng-init="pageSize = 25">
-                    <th colspan="50">
-                        <div class="row">
-                            <div class="col-md-offset-6 col-md-6 text-right">
-                                <pagination ng-init="currentPage = 1" total-items="measurements.length"
-                                            ng-model="currentPage"
-                                            items-per-page="pageSize" class="pagination-sm" max-size="10"
-                                            previous-text="&lsaquo;" next-text="&rsaquo;"></pagination>
-                            </div>
-                        </div>
-                    </th>
-                </tr>
-                </tfoot>
-            </table>
-        </div>
-    </form>
+    <div class="table-responsive">
+        <table class="table table-striped table-condensed table-hover">
+            <thead>
+            <tr>
+                <th class="col-xs-2">Day</th>
+                <th class="col-xs-2">Pilser (cl)</th>
+                <th class="col-xs-2">Strong Beer (cl)</th>
+                <th class="col-xs-2">Wine (cl)</th>
+                <th class="col-xs-2">Liquor (cl)</th>
+                <th class="col-xs-2"></th>
+            </tr>
+            </thead>
+            <tbody>
+            <tr ng-repeat="measurement in measurements | orderBy:'-date' | startFrom:((currentPage-1)*pageSize) | limitTo:pageSize"
+                ng-class="{info: isToday(measurement.date)}">
+                <td>{{measurement.date | date:'dd/MM/yy'}}</td>
+                <td><input class="form-control input-sm" type="number" ng-model="measurement.pilsner"
+                           ng-change="isDirty = true"></td>
+                <td><input class="form-control input-sm" type="number" ng-model="measurement.strongbeer"
+                           ng-change="isDirty = true"></td>
+                <td><input class="form-control input-sm" type="number" ng-model="measurement.wine"
+                           ng-change="isDirty = true"></td>
+                <td><input class="form-control input-sm" type="number" ng-model="measurement.liquor"
+                           ng-change="isDirty = true"></td>
+                <td class="text-right">
+                    <button class="btn btn-sm btn-primary" ng-click="save(measurement); isDirty = false"
+                            ng-show="isDirty" ng-disabled="!isValid(measurement)" type="submit">
+                        <i class="glyphicon glyphicon-ok"></i> Save
+                    </button>
+                </td>
+            </tr>
+            </tbody>
+            <tfoot>
+            <tr ng-hide="!measurements" ng-init="pageSize = 25">
+                <th colspan="50">
+                    <div class="text-right">
+                        <pagination ng-init="currentPage = 1" total-items="measurements.length"
+                                    ng-model="currentPage"
+                                    items-per-page="pageSize" class="pagination-sm" max-size="10"
+                                    previous-text="&lsaquo;" next-text="&rsaquo;"></pagination>
+                    </div>
+                </th>
+            </tr>
+            </tfoot>
+        </table>
+    </div>
 
 </div>
 
