--- a/packages/custom/ddb/public/assets/css/ddb.css
+++ b/packages/custom/ddb/public/assets/css/ddb.css
@@ -1,5 +1,21 @@
-.navbar-brand {
-    color: #fff !important;
+div.navbar-brand {
+    background: #fdc026; /* Old browsers */
+    background: -moz-linear-gradient(left,  #fdc026 0%, #feac00 29%, #f19700 54%, #d98005 100%); /* FF3.6+ */
+    background: -webkit-gradient(linear, left top, right top, color-stop(0%,#fdc026), color-stop(29%,#feac00), color-stop(54%,#f19700), color-stop(100%,#d98005)); /* Chrome,Safari4+ */
+    background: -webkit-linear-gradient(left, #fdc026 0%, #feac00 29%, #f19700 54%, #d98005 100%); /* Chrome10+,Safari5.1+ */
+    background: -o-linear-gradient(left, #fdc026 0%, #feac00 29%, #f19700 54%, #d98005 100%); /* Opera 11.10+ */
+    background: -ms-linear-gradient(left, #fdc026 0%, #feac00 29%, #f19700 54%, #d98005 100%); /* IE10+ */
+    background: linear-gradient(to right, #fdc026 0%, #feac00 29%, #f19700 54%, #d98005 100%); /* W3C */
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#fdc026', endColorstr='#d98005', GradientType=1); /* IE6-9 */
+
+    color: #000 !important;
+    height: 53px !important;
+}
+
+a.logo {
+    color: #000;
+    text-decoration: none;
+    font-weight: bold;
 }
 
 .navbar-nav {
@@ -14,19 +30,19 @@
 .navbar-nav > li > a {
     color: #fff !important;
     background-color: #222 !important;
-    border-bottom: 3px solid black !important;
+    border-bottom: 4px solid black !important;
 }
 
 .navbar-nav > li > a:hover {
-    border-bottom: 3px solid darkorange !important;
+    border-bottom: 4px solid #D98005 !important;
 }
 
 .navbar-nav > li > a.active {
-    border-bottom: 3px solid darkorange !important;
+    border-bottom: 4px solid #D98005 !important;
 }
 
 .navbar {
-    max-height: 54px !important;
+    max-height: 55px !important;
 }
 
 .dropdown-menu {
