--- a/packages/custom/ddb/public/assets/css/ddb.css
+++ b/packages/custom/ddb/public/assets/css/ddb.css
@@ -10,6 +10,7 @@ div.navbar-brand {
 
     color: #000 !important;
     height: 53px !important;
+    font-size: 14pt;
 }
 
 a.logo {
@@ -30,15 +31,16 @@ a.logo {
 .navbar-nav > li > a {
     color: #fff !important;
     background-color: #222 !important;
-    border-bottom: 4px solid black !important;
+    border-bottom: 3px solid black !important;
 }
 
 .navbar-nav > li > a:hover {
-    border-bottom: 4px solid #D98005 !important;
+    border-bottom: 3px solid #F19700 !important;
 }
 
 .navbar-nav > li > a.active {
-    border-bottom: 4px solid #D98005 !important;
+    border-bottom: 3px solid #F19700s
+    !important;
 }
 
 .navbar {
