--- a/packages/custom/ddb/public/assets/css/ddb.css
+++ b/packages/custom/ddb/public/assets/css/ddb.css
@@ -39,7 +39,7 @@ a.logo {
 }
 
 .navbar-nav > li > a.active {
-    border-bottom: 3px solid #F19700s
+    border-bottom: 3px solid #F19700
     !important;
 }
 
