--- a/packages/custom/ddb/public/views/measurements.html
+++ b/packages/custom/ddb/public/views/measurements.html
@@ -33,7 +33,7 @@
                 <td class="text-right">
                     <button class="btn btn-sm btn-primary" ng-click="save(measurement); isDirty = false"
                             ng-show="isDirty" ng-disabled="!isValid(measurement)" type="submit">
-                        <i class="glyphicon glyphicon-ok"></i> Save
+                        <i class="glyphicon glyphicon-floppy-saved"></i> Save
                     </button>
                 </td>
             </tr>
