--- a/packages/custom/ddb/public/assets/css/ddb.css
+++ b/packages/custom/ddb/public/assets/css/ddb.css
@@ -47,10 +47,8 @@ a.logo {
     max-height: 55px !important;
 }
 
-.dropdown-menu {
-    /*right: 0 !important;*/
-    /*left: initial;*/
-    background-color: #222 !important;
+.dropdown-menu > li > a {
+    color: #000 !important;
 }
 
 .dropdown-menu > li > a {
