--- a/packages/custom/ddb/public/views/group.html
+++ b/packages/custom/ddb/public/views/group.html
@@ -23,6 +23,9 @@
                             <td>
                                 {{member.username}}
                             </td>
+                            <td class="text-right">
+                                <a ui-sref="profile({userId: member._id})"><i class="glyphicon glyphicon-stats"></i></a>
+                            </td>
                         </tr>
                     </table>
                 </div>
