--- a/packages/custom/ddb/public/views/profile.html
+++ b/packages/custom/ddb/public/views/profile.html
@@ -2,7 +2,7 @@
 
     <div class="page-header">
         <h1>Profile<br class="visible-xs"/>
-            <small>for {{user.user.name}}</small>
+            <small>for {{user.username}}</small>
         </h1>
     </div>
 
