--- a/packages/custom/ddb/public/views/templates/select-users.html
+++ b/packages/custom/ddb/public/views/templates/select-users.html
@@ -1,4 +1,4 @@
 <div>
-    <multiselect ng-model="selection" options="options" id-prop="id" display-prop="username" show-search="true">
+    <multiselect ng-model="selection" options="options" id-prop="_id" display-prop="username" show-search="true">
     </multiselect>
 </div>
