--- a/packages/core/system/public/views/header.html
+++ b/packages/core/system/public/views/header.html
@@ -22,7 +22,7 @@
                     </a>
                 </li>
                 <li ng-show="hdrctr.hdrvars.authenticated">
-                    <a ui-sref='profile' ng-click="navCollapsed = true" ng-class="{active: isActive('profile')}">
+                    <a ui-sref='profile({userId: hdrctr.hdrvars.user._id})' ng-click="navCollapsed = true" ng-class="{active: isActive('profile')}">
                         <i class="glyphicon glyphicon-stats"/> &nbsp; Profile
                     </a>
                 </li>
