--- a/packages/custom/ddb/public/views/home.html
+++ b/packages/custom/ddb/public/views/home.html
@@ -1,18 +1,6 @@
 <div data-ng-controller="DdbHomeController">
 
- <!--   <div style="height: 500px">
-        <carousel interval="5000">
-            <slide ng-repeat="slide in slides" active="slide.active">
-                <img ng-src="{{slide.image}}" style="margin:auto;">
-
-                <div class="carousel-caption">
-                    <h4>Slide {{$index}}</h4>
-
-                    <p>{{slide.text}}</p>
-                </div>
-            </slide>
-        </carousel>
-    </div>-->
+    <div style="font-size: 10vw; color: #eee; margin-top: 20vh" class="text-center">Beerkeeper</div>
 
 </div>
 
