--- a/packages/custom/ddb/public/views/register.html
+++ b/packages/custom/ddb/public/views/register.html
@@ -22,7 +22,7 @@
         </div>
 
         <div class="form-group">
-            <label for="username">Username</label>
+            <label for="username">Display Name</label>
             <input required id="username" type="text" name="username" placeholder="Username"
                    ng-model="reg.user.username" class="form-control">
         </div>
