--- a/packages/custom/ddb/public/views/group.html
+++ b/packages/custom/ddb/public/views/group.html
@@ -10,6 +10,52 @@
     <div class="row">
         <div class="col-md-9">
 
+            <div class="row">
+                <div class="col-sm-4">
+                    <table class="table">
+                        <thead>
+                        <tr>
+                            <th colspan="3">Binge Trophy</th>
+                        </tr>
+                        </thead>
+                        <tr ng-repeat="rank in ranking.rankingHighestBinge" ng-class="{success: $index === 0}">
+                            <td>{{$index + 1}}</td>
+                            <td>{{rank.user.username}}</td>
+                            <td>{{rank.value | number:2}}</td>
+                        </tr>
+                    </table>
+                </div>
+                <div class="col-sm-4">
+                    <table class="table">
+                        <thead>
+                        <tr>
+                            <th colspan="3">Binge Trophy</th>
+                        </tr>
+                        </thead>
+                        <tr ng-repeat="rank in ranking.rankingHighestBinge" ng-class="{success: $index === 0}">
+                            <td>{{$index + 1}}</td>
+                            <td>{{rank.user.username}}</td>
+                            <td>{{rank.value | number:2}}</td>
+                        </tr>
+                    </table>
+                </div>
+                <div class="col-sm-4">
+                    <table class="table">
+                        <thead>
+                        <tr>
+                            <th colspan="3">Binge Trophy</th>
+                        </tr>
+                        </thead>
+                        <tr ng-repeat="rank in ranking.rankingHighestBinge" ng-class="{success: $index === 0}">
+                            <td>{{$index + 1}}</td>
+                            <td>{{rank.user.username}}</td>
+                            <td>{{rank.value | number:2}}</td>
+                        </tr>
+                    </table>
+                </div>
+            </div>
+
+
         </div>
         <div class="col-md-3">
 
